crates/termino-tui/src/render/snapshots/termino__render__tests__birthday_cake_blown.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render_with(&app, 80, 24, &PLAIN)"
---
                                                                                
     +    +    +                                                                
                                                                                
  +               +                 @@@   @                                     
       .  .  .                      @    @@                                     
     .         .     +              @@@   @                                     
    .           .                     @   @                          |          
   .             .    +             @@@  @@@                         .          
    .           .                ~~~~~~~~~~~~~~                                 
     .         .     +           ~:~~:~~~::~~:~                                 
       .  .  .                   :::.::::::::o:                                 
  +               +         ~~~~~~~~~~~~~~~~~~~~~~~~                            
                            ~%~~~%~~%%~~~o~~%~~~~%~%                            
     +    +    +            %%o%%%%%%%%.%%%%%%%%.%%%                            
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                       
                       ~##~~#~~~##~~~#~~##~~~#~~#~~~#o#~~                       
                       #.########o########o########.#####                       
                       ############# A d a ##############                       
                       ######o########o########.########.                       
                      ====================================                      
                                                                                
                                  MAKE A WISH!                                  
                                                                                
                       Space  light again      Esc  close
