crates/termino-tui/src/render/snapshots/termino__render__tests__birthday_cake_compact_candles.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render(&app, 80, 24)"
---
                     *                                                          
                                                .                               
                                                                                
                                                                                
                                     ^    *      *                              
                                .   █▀▀  ▄█                                     
                                    ▀▀█   █                                     
                                    ▀▀▀  ▀▀▀      o                             
                                                                                
                                                                                
                                    .        .                                  
                                                                                
                             O   O  OO   O  O    O O         *                  
                            OOOOOOOOOOOOOOOOOOOOOOOO                            
                                                                                
                  o     ZZ  Z   ZZ   Z  ZZ   Z  Z   ZZZ                         
                       ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                       
                       ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                       
                   +   ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                       
                      ====================================                      
                                                                                
                                HAPPY BIRTHDAY!                                 
                                                                                
                  Space  blow out the candles      Esc  close
