crates/termino-tui/src/render/snapshots/termino__render__tests__birthday_cake_with_long_name.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render_with(&app, 80, 24, &PLAIN)"
---
                                                                                
                     *                                                          
                                                    .                           
                                       ^                                        
                                     o |                                        
                         *             |                                        
                      .         ~~~~~~~~~~~~~~~                                 
                                ~:~~:~~~:.~~:~~      +                          
                                :::::::o:::::::   o                             
                           ~~~~~~~~~~~~~~~~~~~~~~~~~                            
                           ~%~~~%~~o%~~~%~~%~~~~%~~%                            
                       +   %%%%%%.%%%%%%%%o%%%%%%%%o                            
                       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                        
                       ~##~~#~~~##~~~#~~##~~~#~~#~~~###~                        
                       ####o########.########.########o#                        
                       ##.########o########o########.###                        
                      ===================================                       
                                                                                
                                HAPPY BIRTHDAY!                                 
                     ~ BartholomewBartholomewBartholomew ~                      
                                                                                
                                 press any key
