crates/termino-tui/src/render/snapshots/termino__render__tests__birthday_cake_with_long_name_on_small_terminal.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render_with(&app, MIN_WIDTH, MIN_HEIGHT, &PLAIN)"
---
                                  .                 
                                                    
                                                    
                                   *                
                  .      /\                         
                         ||                         
                         ||         o               
                   ~~~~~~~~~~~~~~                   
                   ~:~~:~~~::~~:~                   
                   :::.::::::::.:                   
              ~~~~~~~~~~~~~~~~~~~~~~~~              
              ~%~~~%~~%%~~~.~~%~~~~%~%         *    
              %%o%%%%%%%%o%%%%%%%%.%%%              
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~         
    o    ~##~~#~~~##~~~#~~##~~~#~~#~~~#.#~~         
         #.########.########o########o#####         
         ########o########.########.#######         
     +   ######.########o########o########.         
        ====================================        
                  HAPPY BIRTHDAY!                   
       ~ BartholomewBartholomewBartholomew ~        
    Space  blow out the candles      Esc  close
