crates/termino-tui/src/render/snapshots/termino__render__tests__confirm_quit_on_title.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render(&app, 80, 24)"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
          TTTTTT  ZZZZZZ  LLLL    OO      OO  IIIIII  JJ    JJ  SSSSSS          
            TT    ZZ      LL  LL  OOOO  OOOO    II    JJJJ  JJ  SS  SS          
            TT    ZZZZ    LLLL    OO  OO  OO    II    JJ  JJJJ  SS  SS          
            TT    ZZ      LL  LL  OO      OO    II    JJ    JJ  SS  SS          
            TT    ZZZZZZ  LL  LL  OO      OO  IIIIII  JJ    JJ  SSSSSS          
                                                                                
                                                                                
                                      QUIT?                                     
                                                                                
                                  Y Enter  yes                                  
                                  N Esc    no
