crates/termino-tui/src/render/snapshots/termino__render__tests__game_over.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render(&app, MIN_WIDTH, MIN_HEIGHT)"
---
┌ HOLD ──────┐ ┌───── TERMINO ──────┐ ┌ NEXT ──────┐
│            │ │ . . .JJ . . . . . .│ │    OOOO    │
│            │ │ . . .JJJJJJ . . . .│ │    OOOO    │
└────────────┘ │ . . .ZZZZ . . . . .│ │            │
               │ . . . .ZZZZ . . . .│ │     SSSS   │
SCORE          │ . . . . .LL . . . .│ │   SSSS     │
226            │ . . .LLLLLL . . . .│ │            │
               │┌──────────────────┐│ │    OOOO    │
LEVEL 1        ││     GAME OVER    ││ │    OOOO    │
LINES 0        ││                  ││ │            │
               ││     SCORE 226    ││ │  IIIIIIII  │
               ││                  ││ │            │
               ││    R  restart    ││ │            │
               ││      Q  quit     ││ │     SSSS   │
               │└──────────────────┘│ │   SSSS     │
               │ . . .LLLLLL . . . .│ └────────────┘
               │ . . . .OOOO . . . .│               
               │ . . .JJOOOO . . . .│               
               │ . . .JJJJJJ . . . .│               
               │ . . . .SSSS . . . .│               
               │ . . .SSSS . . . . .│               
P  pause/help  └────────────────────┘
