crates/termino-tui/src/render/snapshots/termino__render__tests__new_record.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render(&app, MIN_WIDTH, MIN_HEIGHT)"
---
┌ HOLD ──────┐ ┌───── TERMINO ──────┐ ┌ NEXT ──────┐
│            │ │ . . .JJ . . . . . .│ │    OOOO    │
│            │ │ . . .JJJJJJ . . . .│ │    OOOO    │
└────────────┘ │ . . .ZZZZ . . . . .│ │            │
               │ . . . .ZZZZ . . . .│ │     SSSS   │
SCORE          │ . . . . .LL . . . .│ │   SSSS     │
226            │┌──────────────────┐│ │            │
BEST           ││     GAME OVER    ││ │    OOOO    │
226            ││                  ││ │    OOOO    │
               ││     SCORE 226    ││ │            │
LEVEL 1        ││    NEW RECORD!   ││ │  IIIIIIII  │
LINES 0        ││                  ││ │            │
               ││    R  restart    ││ │            │
               ││    Q Esc  quit   ││ │     SSSS   │
               │└──────────────────┘│ │   SSSS     │
               │ . . .LLLLLL . . . .│ └────────────┘
               │ . . . .OOOO . . . .│               
               │ . . .JJOOOO . . . .│               
               │ . . .JJJJJJ . . . .│               
               │ . . . .SSSS . . . .│               
               │ . . .SSSS . . . . .│               
P  pause/help  └────────────────────┘
