crates/termino-tui/src/render/snapshots/termino__render__tests__paused.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render(&app, MIN_WIDTH, MIN_HEIGHT)"
---
┌ HOLD ──────┐ ┌───── TERMINO ──────┐ ┌ NEXT ──────┐
│            │ │ . . .SSSS . . . . .│ │   JJ       │
│            │ │ . . . . . . . . . .│ │   JJJJJJ   │
└────────────┘ │ . . . . . . . . . .│ │            │
               │┌──────────────────┐│ │    OOOO    │
SCORE          ││      PAUSED      ││ │    OOOO    │
0              ││                  ││ │            │
               ││ Left   move left ││ │       LL   │
LEVEL 1        ││ Right  move right││ │   LLLLLL   │
LINES 0        ││ Down   soft drop ││ │            │
               ││ Space  hard drop ││ │   ZZZZ     │
               ││ Up X   rotate    ││ │     ZZZZ   │
               ││ Z      rotate ccw││ │            │
               ││ C      hold      ││ │  IIIIIIII  │
               ││ P      resume    ││ │            │
               ││ R      restart   ││ └────────────┘
               ││ Q      quit      ││               
               │└──────────────────┘│               
               │ . . . . . . . . . .│               
               │ . . . .[][] . . . .│               
               │ . . .[][] . . . . .│               
P  pause/help  └────────────────────┘
