crates/termino-tui/src/render/snapshots/termino__render__tests__plain_theme.snap
---
source: crates/termino-tui/src/render/mod.rs
expression: "render_with(&app, MIN_WIDTH, MIN_HEIGHT, &PLAIN)"
---
+ HOLD ------+ +----- TERMINO ------+ + NEXT ------+
|   ::       | | . . . .[][] . . . .| |       []   |
|   ::::::   | | . . . . . . . . . .| |   [][][]   |
+------------+ | . . . . . . . . . .| |            |
               | . . . . . . . . . .| |   [][]     |
SCORE          | . . . . . . . . . .| |     [][]   |
38             | . . . . . . . . . .| |            |
BEST           | . . . . . . . . . .| |  [][][][]  |
38             | . . . . . . . . . .| |            |
               | . . . . . . . . . .| |            |
LEVEL 1        | . . . . . . . . . .| |     []     |
LINES 0        | . . . . . . . . . .| |   [][][]   |
               | . . . . . . . . . .| |            |
               | . . . . . . . . . .| |     []     |
               | . . . . . . . . . .| |   [][][]   |
               | . . . . . . . . . .| +------------+
               | . . . . . . . . . .|               
               | . . . .:::: . . . .|               
               | . . . .:::: . . . .|               
               | . . . .[][] . . . .|               
               | . . .[][] . . . . .|               
P  pause/help  +--------------------+
